--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
 
                         <p class="indented-text">
                             在醫療現場，我體會到同仁承受的繁瑣負擔：大廳唱名、厚重衛教單張、反覆人工查詢與輸入。
-                            這些流程既耗時又容易出錯。我開始思考如何以數位科技介入，並嘗試導入解方，不僅減輕同仁負擔，
-                            也讓醫療人員能把時間用在陪伴與照護病患，而不會花在重複的行政作業上。
+                            這些流程既耗時又容易出錯。我因此開始思考如何將科技應用於醫療場域，減輕同仁負擔，
+                            讓醫療人員能多陪伴與照護病患，而不會花在重複的行政作業上。
                         </p>
 
-                        <p class="indented-text">這份體悟使我對科技產生濃厚興趣，也希望能進一步提升專業素養與實踐能力，
-                            因此選擇進入資訊工程領域進修，系統化學習軟體開發與 UI/UX 設計，將想法轉化為可落實的硬實力。</p>
+                        <p class="indented-text">在解決問題過程我深刻體會到：數位工具不僅是輔助，更是能有效提升照護品質的關鍵，
+                            因此驅動我投入資訊工程進修，希望強化專業與實作能力，將構想轉化為具體成果。</p>
 
                         <p class="indented-text">
                             經過這段歷程，如今的我已經能：
                         <ol>
                             <li>開發靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
-                            <li>簡易小工具，簡化資料處理，減少人工步驟</li>
-                            <li>將自動化流程導入實際工作場景</li>
+                            <li>完成簡易小工具（DICOM 標記工具）</li>
+                            <li>將自動化流程應用於實際工作情境</li>
                             
                         </ol>
                         在這些實作過程中，我不僅思考「如何完成」，也結合過去客戶成功主管的經驗，
@@ -183,7 +183,7 @@
                             <li>策略思考——先釐清痛點與需求，再設定清楚目標，最後設計解決方案，讓專案能精準落實於 KPI 或 OKR。
                                 （例如：我發現醫療現場同仁唱名既耗時又影響病人隱私，於是提出客戶快搜方案，成功提升效率與客戶就診體驗。）</li>
                             <li>數據導向——以數據分析支撐決策，進而優化醫療與數位服務流程。
-                                （例如：利用系統紀錄分析，提升耗材補充準確率 30%）</li>
+                                （例如：利用衛教系統紀錄分析，提升精準衛教內容 30%）</li>
                             <li>溝通與提案——清晰傳達想法並爭取利害關係人支持。
                                 （例如：跨部門簡報時，成功獲得醫護與資訊單位共識，推動新流程上線）</li>
                         </ol>
