--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <li>策略思考——先釐清痛點與需求，再設定清楚目標，最後設計解決方案，讓專案能精準落實於 KPI 或 OKR。
                                 （例如：我發現醫療現場同仁唱名既耗時又影響病人隱私，於是提出客戶快搜方案，成功提升效率與客戶就診體驗。）</li>
                             <li>數據導向——以數據分析支撐決策，進而優化醫療與數位服務流程。
-                                （例如：利用衛教系統紀錄分析，提升精準衛教 30%）</li>
+                                （例如：利用衛教系統紀錄分析，提升精時衛教30%）</li>
                             <li>溝通與提案——清晰傳達想法並爭取利害關係人支持。
                                 （例如：跨部門簡報時，成功獲得醫護與資訊單位共識，推動新流程上線）</li>
                         </ol>
