--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <li>開發靜態網頁(個人網站)、動態網頁(CRUD系統)</li>
                             <li>完成簡易小工具（DICOM 標記工具）</li>
                             <li>將自動化流程應用於實際工作情境</li>
-                            
+
                         </ol>
                         在這些實作過程中，我不僅思考「如何完成」，也結合過去客戶成功主管的經驗，
                         從使用者成功的角度出發，規劃功能優先順序並優化互動流程，確保解決方案真正貼合使用者需求。
@@ -213,46 +213,13 @@
 
                             <!-- Strengths -->
                             <div class="swot-box strength">
-                                <!-- 左上膠囊 -->
                                 <span class="swot-chip">Strengths</span>
-                                <!-- 交界處圓形徽章 -->
                                 <span class="swot-fab">S</span>
-
-                                <!-- 原本標題保留語意但隱藏 -->
                                 <h5 class="visually-hidden">優勢 (Strengths)</h5>
-
                                 <ul class="swot-items">
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str1"
-                                            aria-expanded="false" aria-controls="str1">
-                                            跨領域專業能力
-                                        </button>
-                                        <div id="str1" class="collapse swot-content">
-                                            <p>護理 + 資訊工程背景，能理解臨床現場痛點並轉化為技術需求，適合數位醫療或健康科技專案。</p>
-                                        </div>
-                                    </li>
-
-
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str3"
-                                            aria-expanded="false" aria-controls="str3">
-                                            強溝通與協作能力
-                                        </button>
-                                        <div id="str3" class="collapse swot-content">
-                                            <p>DiSC 變色龍型人格；善於觀察需求、跨部門協調，兼顧目標達成與團隊關係。</p>
-                                        </div>
-                                    </li>
-
-
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#str5"
-                                            aria-expanded="false" aria-controls="str5">
-                                            創新與系統思維
-                                        </button>
-                                        <div id="str5" class="collapse swot-content">
-                                            <p>善用技術自動化流程（如醫療排程、個案管理），具前瞻思維並提出流程改善建議。</p>
-                                        </div>
-                                    </li>
+                                    <li class="swot-item">跨領域專業能力</li>
+                                    <li class="swot-item">強溝通與協作能力</li>
+                                    <li class="swot-item">創新與系統思維</li>
                                 </ul>
                             </div>
 
@@ -260,37 +227,11 @@
                             <div class="swot-box weakness">
                                 <span class="swot-chip">Weaknesses</span>
                                 <span class="swot-fab">W</span>
-
                                 <h5 class="visually-hidden">劣勢 (Weaknesses)</h5>
-
                                 <ul class="swot-items">
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk1"
-                                            aria-expanded="false" aria-controls="wk1">
-                                            過度追求完美
-                                        </button>
-                                        <div id="wk1" class="collapse swot-content">
-                                            <p>容易延長檢查時間；現以 time-box、定義完成標準 (DoD) 控制精度與進度。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk2"
-                                            aria-expanded="false" aria-controls="wk2">
-                                            容易承擔過多責任
-                                        </button>
-                                        <div id="wk2" class="collapse swot-content">
-                                            <p>以 RACI 與 WIP 限制分配工作量，確保風險與資源平衡。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#wk3"
-                                            aria-expanded="false" aria-controls="wk3">
-                                            過度分析可能拖延決策
-                                        </button>
-                                        <div id="wk3" class="collapse swot-content">
-                                            <p>先決策後驗證：採用 MVP/試點驗證降低遲滯風險。</p>
-                                        </div>
-                                    </li>
+                                    <li class="swot-item">過度追求完美</li>
+                                    <li class="swot-item">容易承擔過多責任</li>
+                                    <li class="swot-item">過度分析可能拖延決策</li>
                                 </ul>
                             </div>
 
@@ -298,37 +239,11 @@
                             <div class="swot-box opportunity">
                                 <span class="swot-chip">Opportunities</span>
                                 <span class="swot-fab">O</span>
-
                                 <h5 class="visually-hidden">機會 (Opportunities)</h5>
-
                                 <ul class="swot-items">
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op1"
-                                            aria-expanded="false" aria-controls="op1">
-                                            數位醫療與健康科技快速成長
-                                        </button>
-                                        <div id="op1" class="collapse swot-content">
-                                            <p>市場導入時機佳；聚焦法規/臨床工作流程整合的產品更具優勢。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op2"
-                                            aria-expanded="false" aria-controls="op2">
-                                            AI 與自動化專案需求增加
-                                        </button>
-                                        <div id="op2" class="collapse swot-content">
-                                            <p>可用 n8n 與前端框架導入自動化與可視化報表，提高效率與透明度。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#op3"
-                                            aria-expanded="false" aria-controls="op3">
-                                            跨領域教育與顧問角色
-                                        </button>
-                                        <div id="op3" class="collapse swot-content">
-                                            <p>以臨床語言連接工程；擔任 PM/顧問加速落地。</p>
-                                        </div>
-                                    </li>
+                                    <li class="swot-item">數位醫療與健康科技快速成長</li>
+                                    <li class="swot-item">AI 與自動化專案需求增加</li>
+                                    <li class="swot-item">跨領域教育與顧問角色</li>
                                 </ul>
                             </div>
 
@@ -336,47 +251,21 @@
                             <div class="swot-box threat">
                                 <span class="swot-chip">Threats</span>
                                 <span class="swot-fab">T</span>
-
                                 <h5 class="visually-hidden">威脅 (Threats)</h5>
-
                                 <ul class="swot-items">
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th1"
-                                            aria-expanded="false" aria-controls="th1">
-                                            快速變動的技術環境
-                                        </button>
-                                        <div id="th1" class="collapse swot-content">
-                                            <p>以學習週期/版本追蹤機制定期更新技能樹，維持競爭力。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th2"
-                                            aria-expanded="false" aria-controls="th2">
-                                            跨領域角色認知挑戰
-                                        </button>
-                                        <div id="th2" class="collapse swot-content">
-                                            <p>用可量化產出（里程碑、KPI、案例庫）建立信任與角色清晰度。</p>
-                                        </div>
-                                    </li>
-                                    <li class="swot-item">
-                                        <button class="swot-toggle" data-bs-toggle="collapse" data-bs-target="#th3"
-                                            aria-expanded="false" aria-controls="th3">
-                                            高責任與多任務壓力
-                                        </button>
-                                        <div id="th3" class="collapse swot-content">
-                                            <p>以優先級框架 (ICE/WSJF) 與資源配置機制，避免過載。</p>
-                                        </div>
-                                    </li>
+                                    <li class="swot-item">快速變動的技術環境</li>
+                                    <li class="swot-item">跨領域角色認知挑戰</li>
+                                    <li class="swot-item">高責任與多任務壓力</li>
                                 </ul>
                             </div>
 
                         </div>
 
-
                     </div>
                 </div>
             </div>
         </div>
+
 
 
         <section class="resume-container main-content">
